prevent overflow on aqua-window

--- a/app/public/css/aqua.css
+++ b/app/public/css/aqua.css
@@ -33,6 +33,7 @@
   font-family:        'Inconsolata', monospace;
   font-size:          15px;
   line-height:        15px;
+  overflow:           hidden;
 }
 
 /* Define the commonality between the Aqua window buttons */
