--- a/app/public/css/uikit.patches.css
+++ b/app/public/css/uikit.patches.css
@@ -45,7 +45,6 @@
   margin-right:  auto;
   margin-bottom: 25px;
   max-width:     570px;
-  overflow:      hidden;
 }
 
 /* Used to set the font family to a monospace font */
